@@ -187,6 +187,7 @@ define,	   0x4B1B40,	0x4B8B00,	0x4B1BD0,	"City_get_pollution_from_buildings",		"
 inlead,	   0x4B1A50,	0x4B8A10,	0x4B1AE0,	"City_get_pollution_from_pop",			"int (__fastcall *) (City * this)"
 inlead,	   0x4ACF40,	0x4B3F20,	0x4ACFD0,	"City_add_or_remove_improvement",		"void (__fastcall *) (City * this, int edx, int improv_id, int add, byte param_3)"
 define,	   0x57E943,	0x58B68E,	0x57E6A3,	"ADDR_RESOURCE_TILE_COUNT_MASK",		"void *"
+define,	   0x57E5EB,	0x58B328,	0x57E34B,	"ADDR_RESOURCE_TILE_COUNT_ZERO_COMPARE",	"void *"
 define,	   0x5DA1A0,	0x5E9710,	0x5DA0D0,	"Tile_get_resource_visible_to",			"int (__fastcall *) (Tile * this, int edx, int civ_id)"
 define,	   0x5D16A0,	0x5E0900,	0x5D15D0,	"Map_get_tile",					"Tile * (__fastcall *) (Map * this, int edx, int index)"
 repl call, 0x57E602,	0x58B345,	0x57E362,	"Map_get_tile_when_recomputing_resources_1",	""
