@@ -2,6 +2,7 @@
 - Disallow useless bombard attacks vs airfields
 - Fix freeze related to trespassing restriction and AI disembarking
 - Rework sub bug fix in order not to interfere with AI pathing vs enemy units
+- Fix potential trade net issue in games with a very large number of tiles and resource generating buildings
 
 * RELEASE 16 PREVIEW 2
 - Option to share visibility among all human players in a hotseat game
